--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -2,3 +2,8 @@
     Put your custom SCSS here! 
     This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
 */
+#item-metadata dl {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 0 0.5em;
+}
